--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -126,6 +126,8 @@
         <activity android:name="com.android.loginapp.BullSearch" android:label="BullSearch"/>
         <activity android:name="com.android.loginapp.BullSelect" android:label="bullSel"/>
         <activity android:name="com.android.loginapp.BullPicked" android:label="bullpicked"/>
+        <activity android:name="com.android.loginapp.Mating" android:label="mating"/>
+        <activity android:name="com.android.loginapp.DateDialog" android:label="date"/>
     </application>
 
 </manifest>
