--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,10 +11,10 @@
     <uses-permission android:name="android.permission.SEND_SMS" />
 
     <uses-sdk
-            android:minSdkVersion="19"
+            android:minSdkVersion="21"
             android:targetSdkVersion="21"/>
     <application android:icon="@drawable/cowicon"
-                 android:label="@string/app_name2"
+                 android:label="Farm Buddy"
                  android:allowBackup="true"
                  android:theme="@style/AppTheme">
 
@@ -138,6 +138,9 @@
         <activity android:name="com.android.loginapp.MyHerd" android:label="My Herd"/>
         <activity android:name="com.android.loginapp.Splash" android:label="Farm Buddy"/>
         <activity android:name="com.android.loginapp.ViewMatings" android:label="Matings"/>
+
+
+
     </application>
 
 </manifest>
